style.css
*, *::after {
  box-sizing: border-box; /*-- sets box math for all elements --*/
}

html{
    background: linear-gradient(to bottom, #1e5799 0%,#7db9e8 50%,#1e5799 100%);
}
main {
    width: 85%;
    margin: 0 auto;
}
.top{
  background-color: #006fa3;
  text-align: center;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  padding: 5px;
  border: 1px solid black;
  border-radius: 12px;
}

ul {
  list-style: none;
  display: inline-block;
  padding-left: 0;
}

ul li {
  display: inline-block;
  padding-left: 1em;
}

.top #banner{
  grid-column: 2;
  font-size: 40px;
  font-family: 'PT Serif', serif;
}

.top .menu {
  grid-column: 1;
  margin-left: 1em;
}
.social-links {
  grid-column: 3;
  margin-right: 1em;
}

.slideshow-container {
  width: 100%;
  height: auto;
  position: relative;
  margin: auto;
  filter: contrast(70%); /*-- adds 70% contrast filter to image --*/
  transition: filter 0.3s ease-in;  /*-- sets filter transition speed and easing --*/
}

.slideshow-container:hover {
    filter: contrast(100%);  /*-- transitions to 100% filter on hover --*/
}

.mySlides-fade {
    display: none;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
}

.prev {
  left: 0;
  border-radius: 3px 0 0 3px;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  background-color: #000000;
  border-radius: 12px;
  opacity: .6;
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor:pointer;
  height: 13px;
  width: 13px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

.grid-container{
  display: grid;
  padding: 10px;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: auto;
  grid-gap: 3em 1em;
}

.grid-item{
  text-align: center;
  position: relative;
  border: 1px solid black;
  background-color: #dbdbdb;
  border-radius: 12px;
  align-content: center;
}

.item-title{
  font-family: 'Oswald', sans-serif;
  align-self: center;
  font-size: 25px;
}

.item-text{
  font-family: 'Droid Serif', serif;
  text-align: center;
  font-size: 10px;
  padding: .5rem .5rem
}

.item-button{
  align-self: center;
  margin: 5px;
}

button{
  background-color: #dbdbdb;
  border-radius: 12px;
  border: 1px solid black;
}

button:hover{
  background-color: #006fa3;
}

.item-image { /*-- general styles for card images --*/
  background-size: cover;  /*-- sets images size to cover --*/
  background-position: center center;  /*-- certers verically and horizontally --*/
  filter: contrast(70%); /*-- adds 70% contrast filter to image --*/
  transition: filter 0.3s ease-in;  /*-- sets filter transition speed and easing --*/
}
.grid-item:hover .item-image {
    filter: contrast(100%);  /*-- transitions to 100% filter on hover --*/
}

iframe{
  width: 100%;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

.grid-item:hover{
  border: 2px solid #1faff2;
}

img{
  width: 100%;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

@media screen and (min-width: 550px) {  /*-- for screens above 550px  --*/
  .grid-container {grid-template-columns: repeat(2, 1fr);}
  .grid-item:first-child {grid-column: 1/ span 2;}
}
@media screen and (min-width: 1024px) { /*-- for screens above 1024px  --*/
  .grid-container {grid-template-columns: repeat(3, 1fr); }
}
@media screen and (min-width: 1280px) { /*-- for screens above 1280px  --*/
  .grid-container {grid-template-columns: repeat(4, 1fr);}
}

.bottom{
  display:grid;
  grid-template-columns: repeat(5,1fr);
  text-align: center;
  width: 100%;
  padding: 5px;
  background-color: #006fa3;
  border: 1px solid black;
  align-content: center;
  border-radius: 12px;
}

.social{
  grid-column: 1;
  float: left;
  margin-left: 1em;
}

footer{
  grid-column: 3;
}

i{
  color: black;
}

i:hover{
  color: #a0efb7;
}

a{
  color: black;
}

a:hover{
  color: #a0efb7;
}

